Fix IAM test & cleanup